TestData/01-Namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dev-env
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: uat-env
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: prod-env
spec: {}
status: {}
