TestData/02-1-MultiContainerPod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-container-pod
    pods: two
  name: multi-container-pod
  namespace: dev-env
spec:
  containers:
  - image: nginx
    name: multi-container-pod-1
  - image: busybox 
    name: multi-container-pod-2
    ports:
    - containerPort: 8090
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
