TestData/03-Deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: student-portal
  name: student-portal
  namespace: dev-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-portal
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: student-portal
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8090
        resources: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: student-portal
  name: student-portal
  namespace: uat-env
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-portal
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: student-portal
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8090
        resources: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: student-portal
  name: student-portal
  namespace: prod-env
spec:
  replicas: 3
  selector:
    matchLabels:
      app: student-portal
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: student-portal
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8090
        resources: {}
status: {}
