TestData/04-Services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: front-end
  name: front-end
  namespace: dev-env
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: front-end
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: front-end
  name: front-end-nodeport
  namespace: dev-env
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: front-end
  type: NodePort
status:
  loadBalancer: {}
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: front-end
  name: front-end-nodeport
  namespace: uat-env
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: front-end
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: front-end
  name: front-end-nodeport
  namespace: prod-env
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: front-end
  type: NodePort
status:
  loadBalancer: {}
