TestData/05-Deployment-Service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: student-portal
  name: student-portal
  namespace: dev-env
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: student-portal
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: student-portal
  name: student-portal
  namespace: uat-env
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: student-portal
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: student-portal
  name: student-portal
  namespace: prod-env
spec:
  externalIPs:
  - 32.33.34.35
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: student-portal
status:
  loadBalancer: {}
