TestData/07-BrokenPod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multi
  name: multi-broken 
  namespace: default
spec:
  containers:
  - image: busyboxxyz
    name: one
  - image: busybox
    name: two
