TestData/07-LBService.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lb-service
  name: lb-service
  namespace: dev-env
spec:
  ports:
  - name: "8090"
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: lb-service
  type: LoadBalancer
status:
  loadBalancer: {}
